[package]
name = "zero2prod"
version = "0.1.0"
edition = "2018"


[[bin]]
path = "src/main.rs"
name = "zero2prod"


[lib]
path = "src/lib.rs"


[dependencies]
actix-web = "3.3.2"
actix-http = "2.2.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
actix-rt = "2"
tokio = { version = "1", features = ["macros"] }